--- a/orbit.html
+++ b/orbit.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./static/style/normalize.css">
 <link rel="stylesheet" href="./static/style/main.css">
     <title>Orbit</title>
@@ -17,7 +18,9 @@
 <div class="earthOrbit">
 <img class="eee" src="static/images/Earth_small.png" alt="">
 <div class="moonOrbit">
+<div id="moon">
 
+</div>
 </div>
 </div>
   </body>
