Functional plus added compatibility

--- a/orbit.html
+++ b/orbit.html
@@ -16,12 +16,16 @@
 </div>
 
 <div class="earthOrbit">
-<img class="eee" src="static/images/Earth_small.png" alt="">
+<img class="eee" src="static/images/Earth.png" alt="">
 <div class="moonOrbit">
 <div id="moon">
 
 </div>
 </div>
+</div>
+<div class="cred">
+<p>DFG</p>
+<span>Source: Udemy</span>
 </div>
   </body>
 </html>
